--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,16 @@
         "cstring": "cpp",
         "coroutine": "cpp",
         "ranges": "cpp",
-        "generator": "cpp"
+        "generator": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "ratio": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "mutex": "cpp",
+        "semaphore": "cpp",
+        "sstream": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp"
     }
 }
